# studynotes

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  studynotes.db
apps/studynotes/: Cargo.toml
apps/studynotes/src/: main.rs
apps/studynotes/tests/: integration.rs  testdata.rs
crates/database/: Cargo.toml
crates/database/src/: connection.rs  lib.rs  sampledata.rs  testutils.rs
crates/database/src/crud/: delete.rs  get.rs  mod.rs  new.rs  update.rs
crates/database/src/models/: collection.rs  mod.rs  note.rs  note_tag.rs  notebook.rs  tag.rs  taxonomy.rs
crates/notes/src/: lib.rs
crates/notes/src/coursera/: mod.rs
tests/: integration.rs  unit.rs
